fix scrollbars missing periodically

--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -79,3 +79,6 @@ body {
   height: 100%;
   position: relative;
 }
+body {
+  overflow-y: auto;
+}
